Radius bug fixed on mobile

--- a/theme.css
+++ b/theme.css
@@ -56,6 +56,5 @@
 	/* Radius */
 	--button-radius: 100px;
 	--radius-s: 100px;
-	--radius-xl: 100px;
   }
   
